[package]
name = "bioma-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.6"
log = "0.4"
# env_logger = "0.11"
log4rs = "1.3.0"
jsonrpc-core = "18.0.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"