[package]
name = "bioma-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.26"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2"
jsonrpc-core = "18.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
html2md = "0.2"
readability-rs = "0.5"
url = "2.5"
robotstxt = "0.3"

[dev-dependencies]
mockito = "1.6"